Fix the poker chip looking blurry when zoomed in Firefox

--- a/components/MintChip/styles.module.scss
+++ b/components/MintChip/styles.module.scss
@@ -15,6 +15,10 @@
   }
 }
 
+.back img {
+  image-rendering: -moz-crisp-edges;
+}
+
 .content {
   display: flex;
   align-items: center;
